# c_ml

./: CMakeLists.txt  README.md  test_server.sh
include/: http_server.h  linear_regression.h
src/: http_server.cpp  linear_regression.cpp  main.cpp
